# AIC22-MCVT

./: LICENSE  readme.md  requirements.txt  run_all.sh  run_mcvt.sh
config/: aic_all.yml  aic_reid1.yml  aic_reid2.yml  aic_reid3.yml
datasets/datasets_utils/: check_result.py  check_traj.py  run_eval.sh  statistic.py  statistic.txt  visual_connect_tracklet.py  visualization.py
detector/yolov5_2022/: detect.py  detect2img.py  gen_det.sh  nohup.out  test.py
detector/yolov5_2022/utils/: plots.py  torch_utils.py
matching/: gen_res.py  sub_cluster.py  trajectory_fusion.py
matching/utils/: filter.py  rerank.py  zone_intra.py
mot/: CMakeLists.txt  run_mot.sh
mot/3rd/rapidjson-1.1.0/: CMakeLists.txt
mot/DeepAppearanceDescriptor/inc/: CMakeLists.txt  FeatureTensor.h  dataType.h  model.h
mot/DeepAppearanceDescriptor/src/: CMakeLists.txt  FeatureTensor.cpp  model.cpp
mot/KalmanFilter/inc/: CMakeLists.txt  city_tracker.h  kalmanfilter.h  linear_assignment.h  nn_matching.h  track.h  tracker.h
mot/KalmanFilter/src/: CMakeLists.txt  city_tracker.cpp  kalmanfilter.cpp  linear_assignment.cpp  main.cpp  nn_matching.cpp  track.cpp  tracker.cpp
mot/MOG/inc/: CMakeLists.txt  bgm.h
mot/MOG/src/: CMakeLists.txt  bgm.cpp
mot/MunkresAssignment/inc/: CMakeLists.txt  hungarianoper.h
mot/MunkresAssignment/src/: CMakeLists.txt
mot/OpticalFlow/inc/: CMakeLists.txt  MedianFlow.h  OpticalFlow.h  define_info.h
mot/OpticalFlow/src/: CMakeLists.txt  MedianFlow.cpp
mot/common/: CMakeLists.txt  common_data.h
mot/eco/inc/: CMakeLists.txt  eco.hpp  fhog.hpp  parameters.hpp  recttools.hpp
mot/re_region/: c041.json  c042.json  c043.json  c044.json  c045.json  c046.json
mot/region/: c041.json  c042.json  c043.json  c044.json  c045.json  c046.json
mot/region_cowd/: c041.json  c042.json  c043.json  c044.json  c045.json  c046.json
mot/tool/: filter_tracklet.py  joint_tracklets.py  post_precess.py  pre_process.py  save_mot.py  utils.py
reid/: extract_image_feat.py
reid/reid_inference/baseline/model/: make_model.py
